Update Pet Store Sample Controller Service
