# samples/pet-store/frontend/components/portal/resources/pet-store.swagger.json
@@ -1,136 +1,55 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "Cellery sample server Petstore server.",
-    "version": "1.0.0",
-    "title": "Swagger Petstore",
+    "description": "Cellery Pet Store Sample Controller Service",
+    "version": "0.1.0",
+    "title": "Cellery Pet Store Sample Controller",
+    "contact": {
+      "email": "dev@wso2.com"
+    },
     "license": {
-      "name": "Apache 2.0"
+      "name": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "petstore.cellery.io",
-  "basePath": "/",
+  "basePath": "/controller",
+  "tags": [
+    {
+      "name": "accessories",
+      "description": "Accessories for your Pets"
+    },
+    {
+      "name": "pets",
+      "description": "Everything to do with Pets"
+    }
+  ],
   "schemes": [
     "http"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
   ],
   "paths": {
     "/catalog": {
       "get": {
         "tags": [
-          "catalog"
+          "accessory",
+          "list"
         ],
-        "summary": "View all pet accessories in the store",
-        "description": "",
+        "summary": "Get the pet accessories in the Catalog",
         "operationId": "getCatalog",
-        "responses": {
-          "200": {
-            "description": "Details of pet accessories",
-            "schema": {
-              "$ref": "#/definitions/Catalog"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/catalog/{product_id}": {
-      "get": {
-        "tags": [
-          "catalog"
-        ],
-        "summary": "View all pet accessories in the store",
-        "description": "",
-        "operationId": "getProduct",
-        "parameters": [
-          {
-            "name": "product_id",
-            "in": "path",
-            "description": "ID of product to return",
-            "required": true,
-            "type": "integer",
-            "format": "int64"
-          }
+        "produces": [
+          "application/json"
         ],
         "responses": {
           "200": {
-            "description": "Details of pet accessory",
+            "description": "Successfully fetched Catalog",
             "schema": {
-              "$ref": "#/definitions/Catalog"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Item"
+              }
             }
           },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/customers": {
-      "get": {
-        "tags": [
-          "customers"
-        ],
-        "summary": "View all customers",
-        "description": "",
-        "operationId": "getCustomers",
-        "responses": {
-          "200": {
-            "description": "Details of customers",
-            "schema": {
-              "$ref": "#/definitions/Customer"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/customers/{customer_id}": {
-      "get": {
-        "tags": [
-          "customers"
-        ],
-        "summary": "View all customers",
-        "description": "",
-        "operationId": "getCustomer",
-        "parameters": [
-          {
-            "name": "customer_id",
-            "in": "path",
-            "description": "ID of customer to return",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Details of customer",
-            "schema": {
-              "$ref": "#/definitions/Customer"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
+          "500": {
+            "description": "Server Error Occurred"
           }
         }
       }
@@ -138,186 +57,113 @@
     "/orders": {
       "get": {
         "tags": [
-          "orders"
+          "order",
+          "list"
         ],
-        "summary": "View all orders",
-        "description": "",
+        "summary": "Get the orders placed",
         "operationId": "getOrders",
-        "responses": {
-          "200": {
-            "description": "Details of orders",
-            "schema": {
-              "$ref": "#/definitions/Order"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/orders/{order_id}": {
-      "get": {
-        "tags": [
-          "orders"
-        ],
-        "summary": "View all orders",
-        "description": "",
-        "operationId": "getOrder",
-        "parameters": [
-          {
-            "name": "order_id",
-            "in": "path",
-            "description": "ID of customer to return",
-            "required": true,
-            "type": "string"
-          }
+        "produces": [
+          "application/json"
         ],
         "responses": {
           "200": {
-            "description": "Details of order",
+            "description": "Succesfully fetched Orders list",
             "schema": {
-              "$ref": "#/definitions/Order"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Order"
+              }
             }
           },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/orders/customer/{customer_id}": {
-      "get": {
-        "tags": [
-          "orders"
-        ],
-        "summary": "View all orders of a specific customer",
-        "description": "",
-        "operationId": "getOrderByCustomer",
-        "parameters": [
-          {
-            "name": "customer_id",
-            "in": "path",
-            "description": "ID of customer to search orders for",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Details of order of the selected customer",
-            "schema": {
-              "$ref": "#/definitions/Order"
-            }
-          },
-          "default": {
-            "description": "unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
+          "500": {
+            "description": "Server Error Occurred"
           }
         }
       }
     }
   },
   "definitions": {
-    "Catalog": {
+    "Item": {
       "type": "object",
       "properties": {
         "id": {
           "type": "integer",
           "format": "int64",
-          "example": 1
+          "description": "Id of the item"
         },
-        "item": {
+        "name": {
           "type": "string",
-          "example": "Leather chain"
+          "description": "Name of the Item"
         },
-        "descripion": {
+        "desrciption": {
           "type": "string",
-          "example": "premium brown doggie chain"
+          "description": "Description about the Item"
         },
         "unitPrice": {
           "type": "string",
-          "example": "$15.90"
+          "format": "currency",
+          "description": "Price of a single unit"
         },
         "inStock": {
           "type": "integer",
           "format": "int64",
-          "example": 200
+          "description": "The number of items in Stock"
         }
       }
     },
     "Customer": {
       "type": "object",
       "properties": {
-        "customer_id": {
+        "username": {
           "type": "string",
-          "example": "001"
+          "description": "Username of the customer as stored by the system"
         },
-        "firstname": {
+        "firstName": {
           "type": "string",
-          "example": "John"
+          "description": "First name of the customer"
         },
-        "lastname": {
+        "lastName": {
           "type": "string",
-          "example": "Doe"
+          "description": "Last name of the customer"
         },
-        "age": {
-          "type": "integer",
-          "format": "int64",
-          "example": 40
+        "pet": {
+          "type": "string",
+          "description": "The pet owned by the customer",
+          "enum": [
+            "dog",
+            "cat",
+            "hamster",
+            "snake",
+            "mouse"
+          ]
         }
       }
     },
     "Order": {
       "type": "object",
       "properties": {
-        "order_id": {
+        "id": {
           "type": "string",
-          "example": "001"
+          "description": "Username of the customer as stored by the system"
         },
-        "customer_id": {
+        "customer": {
           "type": "string",
-          "example": "001"
+          "description": "First name of the customer"
         },
-        "item": {
+        "items": {
           "type": "array",
+          "description": "Items ordered",
           "items": {
-            "type": "integer",
-            "format": "int64",
-            "example": "1,2"
+            "type": "integer"
           }
         },
-        "price": {
+        "deliveryDate": {
           "type": "string",
-          "example": "$35.99"
+          "description": "The date on which the items are estimated to be delivered at"
         },
-        "delivery_date": {
-          "type": "number",
-          "example": "10-03-2019"
-        },
-        "delivery_address": {
+        "deliveryAddress": {
           "type": "string",
-          "example": "No. 20. Palm Grove"
-        }
-      }
-    },
-    "Error": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "message": {
-          "type": "string"
+          "description": "Address to deliver the items to"
         }
       }
     }
